# photorec-sort

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  numberOfFilesPerFolderLimiter.py  pyproject.toml  readme.md
photorec_sort/: __main__.py  cli.py  consts.py  jpg_sorter.py  limit.py  logs.py  utils.py
src/: jpgSorter.py  numberOfFilesPerFolderLimiter.py  recovery.py
