[tool.poetry]
name = "photorec_sort"
version = "1.1.0"
description = ""
authors = ["YisusChrist <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/YisusChrist/sort-PhotorecRecoveredFiles"

[tool.poetry.dependencies]
python = "^3.8"
exifread = "^3.0.0"
string-grab = "^1.3.0"
tqdm = "^4.66.4"
platformdirs = "^4.2.2"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
photorec_sort = "photorec_sort.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
