[tool.poetry]
name = "photorec_sort"
version = "1.2.1"
description = "Sort and organize files recovered by Photorec"
authors = ["YisusChrist <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/YisusChrist/photorec-sort"

[tool.poetry.dependencies]
python = "^3.9"
core-helpers = ">=1.3.1"
exifread = ">=3.0.0"
rich = ">=13.7.1"

[tool.poetry.scripts]
photorec_sort = "photorec_sort.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
